# DigitalCampus2017

./: .gitignore  Cargo.toml  README.md  SmartCampus2017X.sln  build.rs
SmartCampus2017X/SmartCampus2017X/: App.xaml  App.xaml.cs  AppResources.Designer.cs  AppResources.ja.resx  AppResources.kr.resx  AppResources.resx  AppResources.zh-Hans.resx  Converters.cs  MainPage.xaml  MainPage.xaml.cs  RemoteCampusModels.cs  SmartCampus2017X.csproj  XamlExtensions.cs  packages.config
SmartCampus2017X/SmartCampus2017X.Android/: MainActivity.cs  RemoteCampus.cs  SmartCampus2017X.Android.csproj  packages.config
SmartCampus2017X/SmartCampus2017X.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
SmartCampus2017X/SmartCampus2017X.Android/Resources/: Resource.Designer.cs
SmartCampus2017X/SmartCampus2017X.Android/Resources/values/: styles.xml
SmartCampus2017X/SmartCampus2017X.UWP/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  SmartCampus2017X.UWP.csproj
SmartCampus2017X/SmartCampus2017X.UWP/Properties/: AssemblyInfo.cs
SmartCampus2017X/SmartCampus2017X.iOS/: AppDelegate.cs  Info.plist  Main.cs  SmartCampus2017X.iOS.csproj
SmartCampus2017X/SmartCampus2017X.iOS/Properties/: AssemblyInfo.cs
SmartCampus2017X/SmartCampus2017X/Properties/: AssemblyInfo.cs
assets/: strip_all_paths.d
kaede/: Cargo.toml  README.md
src/: event.rs  imaging.rs  main.rs
src/render/: d3d12.rs  mod.rs  vk.rs
