[package]
name = "dc2017"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
publish = false

[features]
target_x11 = ["ws_common/target_x11", "ferrite/VK_KHR_xcb_surface"]

[dependencies]
appinstance = { git = "https://github.com/Pctg-x8/appinstance" }
libc = "0.2"
ws_common = { git = "https://github.com/Pctg-x8/ws_common_rs", features = ["with_ferrite"] }
dc_web = { git = "https://github.com/Pctg-x8/DigitalCampus2017P" }

[target.'cfg(not(windows))'.dependencies]
harfbuzz-sys = "0.1"
freetype-sys = "0.3"

[target.'cfg(not(windows))'.dependencies.ferrite]
git = "https://github.com/Pctg-x8/ferrite"
features = ["FeImplements", "FePresentation"]

[target.'cfg(windows)'.dependencies]
comdrive = { git = "https://github.com/Pctg-x8/comdrive" }
